# progress-pride-bar

./: Cargo.toml  README.md
src/: color.rs  duration.rs  main.rs  progress_pride_bar.rs
