[package]
name = "progress-pride-bar"
version = "0.1.0"
edition = "2021"
authors = ["Mathias Panzenböck"]
description = "A progress bar for the terminal that looks like the progress pride flag."
license = "MIT"

[dependencies]
clap = { version = "4.5.27", features = ["derive", "wrap_help"] }
ctrlc = "3.4.5"
libc = "0.2.169"
terminal_size = "0.4.1"
